[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/bullet.gd" type="Script" id=1]
[ext_resource path="res://gameplay/RotationSprite.tscn" type="PackedScene" id=2]

[node name="shot" type="RigidBody2D"]
collision_layer = 2
collision_mask = 4
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="RotationSprite" parent="." instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="team_set_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aoe" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aoe"]
[connection signal="body_entered" from="." to="." method="_on_shot_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_shot_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Aoe" to="." method="_on_Aoe_body_entered"]
[connection signal="body_exited" from="Aoe" to="." method="_on_Aoe_body_exited"]
